--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -51,11 +51,6 @@
         <version>20</version>
     </dependency>
     <dependency>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-graphics</artifactId>
-        <version>20</version>
-    </dependency>
-    <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
         <version>31.1-jre</version>
@@ -63,6 +58,11 @@
   </dependencies>
 
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+      </resource>
+    </resources>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
@@ -84,8 +84,20 @@
           <version>2.22.1</version>
         </plugin>
         <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>3.0.2</version>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-jar-plugin</artifactId>
+         <version>3.3.0</version>
+         <configuration>
+             <archive>
+                 <manifest>
+                     <addClasspath>true</addClasspath>
+                     <mainClass>com.carlst.AppStarter</mainClass>
+                 </manifest>
+                 <manifestEntries>
+                     <Class-Path>.</Class-Path>
+                 </manifestEntries>
+             </archive>
+         </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
@@ -103,6 +115,40 @@
         <plugin>
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
+        </plugin>
+        <plugin>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-maven-plugin</artifactId>
+            <version>0.0.8</version>
+            <configuration>
+                <mainClass>com.carlst.javafx.App</mainClass>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>3.5.0</version>
+            <configuration>
+             <finalName>BeerTracker</finalName>
+             <archive>
+                 <manifest>
+                     <mainClass>com.carlst.AppStarter</mainClass>
+                 </manifest>
+             </archive>
+             <descriptorRefs>
+                 <descriptorRef>jar-with-dependencies</descriptorRef>
+             </descriptorRefs>
+             <appendAssemblyId>false</appendAssemblyId>
+         </configuration>
+         <executions>
+             <execution>
+                 <id>make-assembly</id>
+                 <phase>package</phase>
+                 <goals>
+                     <goal>single</goal>
+                 </goals>
+             </execution>
+         </executions>
         </plugin>
       </plugins>
     </pluginManagement>
