--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,19 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.carlst</groupId>
+  <groupId>storlien</groupId>
   <artifactId>beertracker</artifactId>
   <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-  <name>beertracker</name>
+    <name>beertracker</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
+    <modules>
+        <module>core</module>
+    </modules>
 
-  <properties>
+    <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
@@ -97,7 +101,7 @@
              <archive>
                  <manifest>
                      <addClasspath>true</addClasspath>
-                     <mainClass>com.carlst.AppStarter</mainClass>
+                     <mainClass>beertracker.core/storlien.beertracker.core.AppStarter</mainClass>
                  </manifest>
                  <manifestEntries>
                      <Class-Path>.</Class-Path>
@@ -127,7 +131,7 @@
             <artifactId>javafx-maven-plugin</artifactId>
             <version>0.0.8</version>
             <configuration>
-                <mainClass>com.carlst.javafx.App</mainClass>
+                <mainClass>beertracker.core/storlien.beertracker.core.javafx.App</mainClass>
             </configuration>
         </plugin>
         <plugin>
@@ -138,7 +142,7 @@
              <finalName>BeerTracker</finalName>
              <archive>
                  <manifest>
-                     <mainClass>com.carlst.AppStarter</mainClass>
+                     <mainClass>beertracker.core/storlien.beertracker.core.AppStarter</mainClass>
                  </manifest>
              </archive>
              <descriptorRefs>
