--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>core</artifactId>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <parent>
-        <groupId>storlien</groupId>
-        <artifactId>beertracker</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <groupId>io.github.storlien</groupId>
+        <artifactId>beertracker-application</artifactId>
+        <version>1.0</version>
     </parent>
 
     <properties>
